--- a/auftrag 5/style.css
+++ b/auftrag 5/style.css
@@ -1,265 +1,265 @@
 :root {
-    --left_space: 2vw;
+  --left_space: 2vw;
 }
 
 .grid-container {
-    display: grid;
-    grid-template-columns: 22.5vw 22.5vw 22.5vw 22.5vw;
-    grid-template-rows: auto;
-    grid-template-areas: 
-      "header menu menu menu"
-      "content content pic pic"
-      "footer footer footer footer";
-    border-radius: 2vw;
-    background-image: linear-gradient(45deg, rgba(31, 34, 44, 0.973) 25%,rgba(59, 99, 131, 0.712) 75%);
-    height: 80%;
+  display: grid;
+  grid-template-columns: 22.5vw 22.5vw 22.5vw 22.5vw;
+  grid-template-rows: auto;
+  grid-template-areas: 
+    "header menu menu menu"
+    "content content pic pic"
+    "footer footer footer footer";
+  border-radius: 2vw;
+  background-image: linear-gradient(45deg, rgba(31, 34, 44, 0.973) 25%,rgba(59, 99, 131, 0.712) 75%);
+  height: 80%;
 }
-  .item {
-    color: white;
-  }
-  .item-logo {
-    grid-area: header;
-    height: 5vw;
-    display: flex;
-    align-items: center;
+.item {
+  color: white;
+}
+.item-logo {
+  grid-area: header;
+  height: 5vw;
+  display: flex;
+  align-items: center;
 
-  }
-  .item-menu {
-    grid-area: menu;
-    display: flex;
-    justify-content: center;
-    justify-content: space-evenly;
-    align-items: center;
+}
+.item-menu {
+  grid-area: menu;
+  display: flex;
+  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
 
 
-  }
-  .item-menu > a {
-    color: white;
-    text-decoration: none;
-  }
-  .item-content {
-    grid-area: content;
-    flex-direction: column;
-    justify-content: flex-end;
-    height: 40vw;
-  }
-  .item-pic {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    grid-area: pic;
-    height: 30vw;
-  }
-  .item-footer {
-    border-bottom-left-radius: 40px;
-    grid-area: footer;
-    display: flex;
-    justify-content: first baseline;
-    align-items: flex-end;
-  }
-  .grid-container {
-    margin: 2vw;
-  }
+}
+.item-menu > a {
+  color: white;
+  text-decoration: none;
+}
+.item-content {
+  grid-area: content;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: auto;
+}
+.item-pic {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-area: pic;
+  height: auto;
+}
+.item-footer {
+  border-bottom-left-radius: 40px;
+  grid-area: footer;
+  display: flex;
+  justify-content: first baseline;
+  align-items: flex-end;
+}
+.grid-container {
+  margin: 2vw;
+}
 body {
-    background-color: rgb(52, 71, 87);
-    font-family: 'Roboto', sans-serif;
+  background-color: rgb(52, 71, 87);
+  font-family: 'Roboto', sans-serif;
 
-    margin-right: 2vw;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin: 3vw;
-    font-size: medium;
+  margin-right: 2vw;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 3vw;
+  font-size: medium;
 }
 .item-logo > a {
-    grid-area: "header";
-    font-family: 'Vina Sans', sans-serif;
-    font-weight: 300;
-    font-size: xx-large;
-    text-decoration: none;
-    color: white;
+  grid-area: "header";
+  font-family: 'Vina Sans', sans-serif;
+  font-weight: 300;
+  font-size: xx-large;
+  text-decoration: none;
+  color: white;
 }
 
 
 .content-title {
-    margin-left: var(--left_space);
-    justify-content: center;
-    align-items: center;
+  margin-left: var(--left_space);
+  justify-content: center;
+  align-items: center;
 
 }
 #content-text_1 {
-    margin-left: var(--left_space);
+  margin-left: var(--left_space);
 }
 #title-text {
-    margin-left: var(--left_space);
-    align-items: center;
+  margin-left: var(--left_space);
+  align-items: center;
 }
 #img_db {
 max-width: 55%;
 margin-right: 2.5vw;
 }
 #copyright {
-    font-size: smaller;
-    margin-bottom: 1vw;
-    margin-left: 1vw;
+  font-size: smaller;
+  margin-bottom: 1vw;
+  margin-left: 1vw;
 }
 #explorebutton {
-    margin-left: var(--left_space);
+  margin-left: var(--left_space);
 }
 a.menu-item:hover {
-    border-bottom: 1px solid beige;
-    border-top: 1px solid rgba(5, 5, 5, 0);
-    text-decoration: none;
-    color: white;
+  border-bottom: 1px solid beige;
+  border-top: 1px solid rgba(5, 5, 5, 0);
+  text-decoration: none;
+  color: white;
 }
 .button {
-    background-image: linear-gradient(90deg, rgba(68, 42, 185, 0.9) 10%,rgba(108, 15, 145, 0.9) 40%);
-    border-radius: 8px;
-    border-style: none;
-    color: white;
-    cursor: pointer;
-    height: 30px;
-    width: 100px;
+  background-image: linear-gradient(90deg, rgba(68, 42, 185, 0.9) 10%,rgba(108, 15, 145, 0.9) 40%);
+  border-radius: 8px;
+  border-style: none;
+  color: white;
+  cursor: pointer;
+  height: 30px;
+  width: 100px;
 }
 .button:hover {
-    background-image: linear-gradient(90deg, rgb(68, 42, 185) 60%,rgb(108, 15, 145) 90%);
+  background-image: linear-gradient(90deg, rgb(68, 42, 185) 60%,rgb(108, 15, 145) 90%);
 }
 #rahmen {
-    background-color: rgba(128, 128, 128, 0.7);
+  background-color: rgba(128, 128, 128, 0.7);
 
 
-    border-radius: 2vw;
+  border-radius: 2vw;
 }
 
 
 
 
 .hamburger_menu {
-    visibility: hidden;
+  visibility: hidden;
 }
 #menu__toggle {
-    opacity: 0;
-  }
-  #menu__toggle:checked + .menu__btn > span {
-    transform: rotate(45deg);
-  }
-  #menu__toggle:checked + .menu__btn > span::before {
-    top: 0;
-    transform: rotate(0deg);
-  }
-  #menu__toggle:checked + .menu__btn > span::after {
-    top: 0;
-    transform: rotate(90deg);
-  }
-  #menu__toggle:checked ~ .menu__box {
-    left: 0 !important;
-  }
-  .menu__btn {
-    margin-top: 1vw;
-    margin-left: 1vw;
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
-    z-index: 1;
-  }
-  .menu__btn > span,
-  .menu__btn > span::before,
-  .menu__btn > span::after {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background-color: #a0c9eb;
-    transition-duration: .25s;
-  }
-  .menu__btn > span::before {
-    content: '';
-    top: -8px;
-  }
-  .menu__btn > span::after {
-    content: '';
-    top: 8px;
-  }
-  .menu__box {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: -1000%;
-    width: 300px;
-    height: 100%;
-    margin: 0;
-    padding: 80px 0;
-    list-style: none;
-    background-color: #ECEFF1;
-    box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
-    transition-duration: .25s;
-  }
-  .menu__item {
-    display: block;
-    padding: 12px 24px;
-    color: #333;
-    font-family: 'Roboto', sans-serif;
-    font-size: 130%;
-    font-weight: 600;
-    text-decoration: none;
-    transition-duration: .25s;
-  }
-  .menu__item:hover {
-    background-color: #CFD8DC;
-  }
-  #rahmen > p{
-    font-size: 0%;
-    margin-top: 2vw;
-    visibility: hidden;
+  opacity: 0;
 }
-  /* For desktop: */
+#menu__toggle:checked + .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked + .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0deg);
+}
+#menu__toggle:checked + .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+  left: 0 !important;
+}
+.menu__btn {
+  margin-top: 1vw;
+  margin-left: 1vw;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  z-index: 1;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #a0c9eb;
+  transition-duration: .25s;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+.menu__box {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: -1000%;
+  width: 300px;
+  height: 100%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  background-color: #ECEFF1;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+  transition-duration: .25s;
+}
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: #333;
+  font-family: 'Roboto', sans-serif;
+  font-size: 130%;
+  font-weight: 600;
+  text-decoration: none;
+  transition-duration: .25s;
+}
+.menu__item:hover {
+  background-color: #CFD8DC;
+}
+#rahmen > p{
+  font-size: 0%;
+  margin-top: 2vw;
+  visibility: hidden;
+}
+/* For desktop: */
 
 @media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    [class*="item-"] {
-      height: 100%;
-      font-size: 80%;
-    }
-    .grid-container {
-        display: grid;
-        grid-template-columns: 100vw;
-        grid-template-areas: 
-          "header "
-          "pic "
-          "content"
-          "footer ";
-          margin: 0vw;
-    }
-    .item-menu {
-        visibility: hidden;
-    }
-    .hamburger_menu {
-        visibility: visible;
-    }
-    .item-pic {
-        justify-content: flex-start
-    }
-    #img_db {
-        max-width: 30%;
-        margin-left: var(--left_space);
-    }
-    .item-footer {
-        margin-left: var(--left_space);
-
-    }
-    #rahmen {
-        background-color: rgba(1, 1, 1, 0);
-        margin: 0vw;
-    }
-    body {
-        margin: 0vw;
-    }
-    #rahmen > p{
-        margin-top: 0vw;
-        display: flex;
-        justify-content: flex-end;
-    }
+  /* For mobile phones: */
+  [class*="item-"] {
+    height: 100%;
+    font-size: 80%;
   }
+  .grid-container {
+      display: grid;
+      grid-template-columns: 100vw;
+      grid-template-areas: 
+        "header "
+        "pic "
+        "content"
+        "footer ";
+        margin: 0vw;
+  }
+  .item-menu {
+      visibility: hidden;
+  }
+  .hamburger_menu {
+      visibility: visible;
+  }
+  .item-pic {
+      justify-content: flex-start
+  }
+  #img_db {
+      max-width: 30%;
+      margin-left: var(--left_space);
+  }
+  .item-footer {
+      margin-left: var(--left_space);
+
+  }
+  #rahmen {
+      background-color: rgba(1, 1, 1, 0);
+      margin: 0vw;
+  }
+  body {
+      margin: 0vw;
+  }
+  #rahmen > p{
+      margin-top: 0vw;
+      display: flex;
+      justify-content: flex-end;
+  }
+}
