--- a/auftrag 5/style.css
+++ b/auftrag 5/style.css
@@ -224,7 +224,7 @@ a.menu-item:hover {
   }
   .grid-container {
       grid-template-columns: auto;
-      grid-template-rows: auto 1fr auto auto;
+      grid-template-rows: auto auto 1fr auto;
       grid-template-areas: 
         "header "
         "pic "
