--- a/Auftrag 7/style.css
+++ b/Auftrag 7/style.css
@@ -1,3 +1,45 @@
+html {
+    min-height: 100vh;
+    box-sizing: border-box;
+    max-width: 100vw;
+}
 body {
-    height: 100vw;
+    height: 100vh;
+    box-sizing: border-box;
+    margin: 0;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto  1fr 2fr 2fr auto;
+    grid-template-areas: 
+      "item-logo item-menu "
+      "item-header item-header"
+      "item-profile item-profile"
+      "item-password item-password"
+      "item-footer item-footer";
+    border: 1px solid hotpink;
+    min-height: 100vh;
+    box-sizing: border-box;
+}
+.item {
+    border: 1px solid hotpink;
+}
+.item-logo {
+    grid-area: item-logo;
+}
+.item-menu {
+    grid-area: item-menu;
+}
+.item-header {
+    grid-area: item-header;
+}
+.item-profile {
+    grid-area: item-profile;
+}
+.item-password {
+    grid-area: item-password;
+}
+.item-footer {
+    grid-area: item-footer;
 }
