--- a/Auftrag 7/style.css
+++ b/Auftrag 7/style.css
@@ -2,6 +2,7 @@ html {
     min-height: 100vh;
     box-sizing: border-box;
     max-width: 100vw;
+    font-family: 'Poppins', sans-serif;
 }
 body {
     height: 100vh;
@@ -10,13 +11,12 @@ body {
 }
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto  1fr 2fr 2fr auto;
+    grid-template-columns: 1fr 1.5fr;
+    grid-template-rows: auto  auto 1fr auto;
     grid-template-areas: 
       "item-logo item-menu "
       "item-header item-header"
-      "item-profile item-profile"
-      "item-password item-password"
+      "item-input item-input"
       "item-footer item-footer";
     border: 1px solid hotpink;
     min-height: 100vh;
@@ -24,22 +24,61 @@ body {
 }
 .item {
     border: 1px solid hotpink;
+    padding: 1vw;
 }
 .item-logo {
     grid-area: item-logo;
 }
 .item-menu {
     grid-area: item-menu;
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
 }
 .item-header {
     grid-area: item-header;
+    display: flex;
+    justify-content: center;
 }
-.item-profile {
-    grid-area: item-profile;
-}
-.item-password {
-    grid-area: item-password;
+.item-input {
+    grid-area: item-input;
 }
 .item-footer {
     grid-area: item-footer;
+    display: grid;
+    grid-template-columns: 40vw auto 40vw;
+    grid-template-areas: 
+    "item-footer-left . item-footer-right ";
 }
+.item-footer-left {
+    grid-area: item-footer-left;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.item-footer-right {
+    grid-area: item-footer-right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.item-footer-left > a {
+    text-decoration: none;
+    color: black;
+}
+.socialmedia {
+    max-width: 1rem;
+}
+.button {
+    background-color: white;
+    border-radius: 8px;
+    cursor: pointer;
+    height: 30px;
+    width: 100px;
+  }
+  .button:hover {
+    background: rgba(55, 0, 128, 0.5);
+    color: white;
+  }
