--- a/Auftrag 7/style.css
+++ b/Auftrag 7/style.css
@@ -31,8 +31,9 @@ body {
     box-sizing: border-box;
 }
 .item {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     border: 1px solid hotpink;
-    padding: 1vw;
 }
 .item-logo {
     grid-area: item-logo;
@@ -126,14 +127,19 @@ body {
 .boxes {
     margin-left: 0;
     margin-right: 0;
-    width: 94vw;
+    width: 80vw;
     margin-bottom: 1rem;
+    background-color: var(--daycolor);
+    border: 1px solid rgb(184, 181, 181);
+    border-radius: 3px;
 }
 .title {
     margin-bottom: 0;
     margin-top: 1rem;
 }
-
+.center {
+    padding-left: 10vw;
+}
 
 @media (prefers-color-scheme: dark) {
 	html {
